@@ -1,3 +1,8 @@
+2019-11-07  Martin Liska  <mliska@suse.cz>
+
+	PR c++/92354
+	* g++.target/i386/pr92354.C: New test.
+
 2019-11-07  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>
 
 	* gcc.dg/tree-ssa/pr92163.c: Add dg-require-effective-target fopenacc.
